--- a/src/Robo.Api/Robo.Api.csproj
+++ b/src/Robo.Api/Robo.Api.csproj
@@ -5,6 +5,7 @@
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..</DockerfileContext>
+    <DockerComposeProjectPath>..\..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
@@ -16,6 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Robo.Aplicacao\Robo.Aplicacao.csproj" />
+    <ProjectReference Include="..\Robo.IoC\Robo.IoC.csproj" />
   </ItemGroup>
 
 </Project>
